--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -36,7 +36,7 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-              <a class="nav-link active" aria-current="page" href="{{url_for('main')}}">Strona Główna</a>
+              <a class="nav-link active" aria-current="page" href="main.html">Strona Główna</a>
               <a class="nav-link" href="extraction.html">Ekstrakcja</a>
               <a class="nav-link" href="p_list.html">Lista produktów</a>
               <a class="nav-link" href="author.html">O Autorze</a>
